<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/darkGray"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layoutDirection="locale">
            <TextView
                android:textSize="22.0sp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:layout_marginBottom="10.0dip"
                android:text="@string/strEditSat"
                android:layoutDirection="locale"
                android:layout_marginStart="10.0dip" />
        </LinearLayout>
        <View
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            android:layout_width="fill_parent"
            android:layout_height="2.0dip" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:layout_marginBottom="5.0dip"
            android:weightSum="10.0"
            android:layoutDirection="locale"
            android:layout_marginStart="10.0dip"
            android:layout_marginEnd="10.0dip">
            <TextView
                android:textSize="16.0sp"
                android:textColor="@color/white"
                android:paddingTop="2.0dip"
                android:paddingBottom="2.0dip"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/strSatName"
                android:layout_weight="3.0" />
            <EditText
                android:textSize="16.0sp"
                android:textColor="@color/white"
                android:id="@id/sat_name_input"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="7.0" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:layout_marginBottom="2.0dip"
            android:weightSum="10.0"
            android:layoutDirection="locale"
            android:layout_marginStart="10.0dip"
            android:layout_marginEnd="10.0dip">
            <TextView
                android:textSize="16.0sp"
                android:textColor="@color/white"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/strSatPos"
                android:layout_weight="2.0" />
            <EditText
                android:textSize="16.0sp"
                android:textColor="@color/white"
                android:id="@id/sat_position_input"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4.0"
                android:inputType="numberDecimal" />
            <RadioGroup
                android:orientation="horizontal"
                android:id="@id/sat_pos_radio"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="4.0">
                <RadioButton
                    android:gravity="center"
                    android:id="@id/sat_pos_west_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:checked="true"
                    android:text="@string/strW" />
                <View
                    android:layout_width="10.0dip"
                    android:layout_height="fill_parent" />
                <RadioButton
                    android:id="@id/sat_pos_east_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:checked="false"
                    android:text="@string/strE" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:layout_marginBottom="10.0dip"
            android:weightSum="10.0"
            android:layoutDirection="locale"
            android:layout_marginStart="5.0dip"
            android:layout_marginEnd="5.0dip">
            <TextView
                android:textSize="16.0sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:layout_marginBottom="5.0dip"
                android:text="@string/strFrequency"
                android:layout_weight="3.5" />
            <TextView
                android:textSize="16.0sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:layout_marginBottom="5.0dip"
                android:text="@string/strSymbolRate"
                android:layout_weight="3.5" />
            <TextView
                android:textSize="16.0sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:layout_marginBottom="5.0dip"
                android:text="@string/strPolar"
                android:layout_weight="2.0" />
            <ImageView
                android:layout_gravity="center"
                android:id="@id/sat_edit_tp_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add"
                android:layout_weight="1.0"
                android:layout_marginStart="5.0dip"
                android:layout_marginEnd="5.0dip" />
        </LinearLayout>
        <ListView
            android:id="@id/sat_edit_tp_list"
            android:background="@color/darkGray"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50.0dip" />
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="bottom|center"
        android:orientation="horizontal"
        android:background="@color/darkGray"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:weightSum="7.0"
        android:layoutDirection="locale">
        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.25" />
        <Button
            android:id="@id/sat_edit_cancel"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/strCancel"
            android:layout_weight="3.0" />
        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.5" />
        <Button
            android:id="@id/sat_edit_commit"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/strCommit"
            android:layout_weight="3.0" />
        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.25" />
    </LinearLayout>
</FrameLayout>