<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
            android:text="@string/settings"
            android:textAlignment="center"
            android:id="@id/toolbar_setting"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"

            android:adjustViewBounds="true"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/toolbar_channel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/search"
            android:textAlignment="center"
            android:id="@id/toolbar_channel"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"

            android:adjustViewBounds="true"
            app:layout_constraintEnd_toStartOf="@id/toolbar_satellite"
            app:layout_constraintStart_toEndOf="@id/toolbar_setting"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/satellites"
            android:textAlignment="center"
            android:id="@id/toolbar_satellite"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"

            android:adjustViewBounds="true"

            app:layout_constraintStart_toEndOf="@id/toolbar_channel"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>