<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:layout_marginBottom="10.0dip"
        android:weightSum="8.0"
        android:layoutDirection="locale"
        android:layout_marginStart="10.0dip"
        android:layout_marginEnd="10.0dip">
        <TextView
            android:textSize="16.0dip"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/strFrequency"
            android:layout_weight="4.0" />
        <EditText
            android:textSize="16.0dip"
            android:id="@id/sat_tp_freq_input"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3.0"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:layout_marginBottom="10.0dip"
        android:weightSum="8.0"
        android:layoutDirection="locale"
        android:layout_marginStart="10.0dip"
        android:layout_marginEnd="10.0dip">
        <TextView
            android:textSize="16.0dip"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/strSymbolRate"
            android:layout_weight="4.0" />
        <EditText
            android:textSize="16.0dip"
            android:id="@id/sat_tp_symbolrate_input"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3.0"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:layout_marginBottom="10.0dip"
        android:layoutDirection="locale"
        android:layout_marginStart="10.0dip"
        android:layout_marginEnd="10.0dip">
        <RadioGroup
            android:orientation="horizontal"
            android:id="@id/sat_pos_radio"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="3.0"
            android:layoutDirection="locale">
            <View
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0" />
            <RadioButton
                android:gravity="center"
                android:id="@id/sat_tp_radio_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/strH" />
            <View
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.5" />
            <RadioButton
                android:id="@id/sat_tp_radio_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/strV" />
            <View
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>