<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:id="@id/drawer_list_view"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" android:background="?android:attr/colorBackground">
    <LinearLayout
            android:orientation="horizontal"
            android:id="@id/setting_lang"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/drawer_item_size"
            android:weightSum="10.0"
            android:layoutDirection="locale"
            android:layout_marginStart="@dimen/common_layout_padding">
        <TextView
                android:textSize="@dimen/drawer_text_size"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:id="@id/setting_lang_lbl"
                android:layout_width="160.0dip"
                android:layout_height="fill_parent"
                android:text="@string/strLang"/>
        <Spinner
                android:id="@id/setting_lang_spn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:spinnerMode="dropdown"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:id="@id/setting_beeper"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/drawer_item_size"
            android:weightSum="10.0"
            android:layoutDirection="locale"
            android:layout_marginStart="@dimen/common_layout_padding">
        <TextView
                android:textSize="@dimen/drawer_text_size"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:id="@id/setting_beep_lbl"
                android:layout_width="160.0dip"
                android:layout_height="fill_parent"
                android:text="@string/strBeeper"/>
        <Spinner
                android:id="@id/setting_beep_spn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:spinnerMode="dropdown"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:id="@id/setting_strength_up"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/drawer_item_size"
            android:weightSum="10.0"
            android:layoutDirection="locale"
            android:layout_marginStart="@dimen/common_layout_padding">
        <TextView
                android:textSize="@dimen/drawer_text_size"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:id="@id/setting_st_upper_lbl"
                android:layout_width="160.0dip"
                android:layout_height="fill_parent"
                android:text="@string/strStrengthUp"/>
        <Spinner
                android:id="@id/setting_st_upper_spn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:spinnerMode="dropdown"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:id="@id/setting_strength_down"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/drawer_item_size"
            android:weightSum="10.0"
            android:layoutDirection="locale"
            android:layout_marginStart="@dimen/common_layout_padding">
        <TextView
                android:textSize="@dimen/drawer_text_size"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:id="@id/setting_st_down_lbl"
                android:layout_width="160.0dip"
                android:layout_height="fill_parent"
                android:text="@string/strStrengthDown"/>
        <Spinner
                android:id="@id/setting_st_down_spn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:spinnerMode="dropdown"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:id="@id/setting_qt_upper"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/drawer_item_size"
            android:weightSum="10.0"
            android:layoutDirection="locale"
            android:layout_marginStart="@dimen/common_layout_padding">
        <TextView
                android:textSize="@dimen/drawer_text_size"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:id="@id/setting_qt_upper_lbl"
                android:layout_width="160.0dip"
                android:layout_height="fill_parent"
                android:text="@string/strQtUp"/>
        <Spinner
                android:id="@id/setting_qt_upper_spn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:spinnerMode="dropdown"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:id="@id/setting_qt_down"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/drawer_item_size"
            android:weightSum="10.0"
            android:layoutDirection="locale"
            android:layout_marginStart="@dimen/common_layout_padding">
        <TextView
                android:textSize="@dimen/drawer_text_size"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:id="@id/setting_qt_down_lbl"
                android:layout_width="160.0dip"
                android:layout_height="fill_parent"
                android:text="@string/strQtDown"/>
        <Spinner
                android:id="@id/setting_qt_down_spn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:spinnerMode="dropdown"/>
    </LinearLayout>
</LinearLayout>